# lib/api-spec/openapi.yaml
@@ -224,7 +224,7 @@ components:
       properties:
         tier:
           type: string
-          enum: [none, poc, enterprise, buyout]
+          enum: [none, dev, poc, enterprise, buyout]
         active:
           type: boolean
         licenseKey:
@@ -268,6 +268,16 @@ components:
           type: boolean
         blasBackend:
           type: string
+        cpuModel:
+          type: string
+        cores:
+          type: integer
+        cpuFreqMhz:
+          type: number
+        numaNodes:
+          type: integer
+        openmpThreads:
+          type: integer
         kernel:
           type: string
         licensed:
